syntax = "proto3";

package proto;

/***************************
 * Logger service protocol *
 ***************************
 */

message Severity {
    enum Severity {
        DEBUG = 0;
        INFO = 1;
        WARN = 2;
        ERROR = 3;
        FATAL = 4;
    }
    Severity level = 1;
}

message LogEntry {
    Severity severity = 1;
    string type = 2;
    int32 index = 3;
    uint64 timestampUTC = 4;
    string message = 5;
    string signature = 6;
}

message Constraint {
    uint64 fromLogIndex = 1;
    uint64 toLogIndex = 2;
}

message ConstraintedLogRequest {
    string type = 1;
    int32 index = 2;
    oneof contraint {
        uint64 lastNLogs = 3;
        Constraint fromToConstraint = 4;
    }
    string signature = 5;
}

message LoggerResponse {
    enum Code {
        __DEFAULT = 0;
        OK = 1;
        SERVICE_FAIL = 2;
        NOT_AUTHORIZED = 3;
        SERVICE_UNKNOWN = 4;
    }
    Code status = 1;
}

message SignedServiceInfo {
    string type = 1;
    int32 index = 2;
    string signature = 3;
}

message LogEntriesCount {
    string type = 1;
    int32 index = 2;
    uint64 count = 3;
}
