syntax = "proto3";

package proto;

import "google/api/annotations.proto";
import "logger_messages.proto";
import "general.proto";

service LoggerService {

    rpc GetHealth(Empty) returns(Health) {
        option (google.api.http) = {
            get: "/logger/health"
        };
    }

    rpc AddLog(LogEntry) returns(LoggerResponse) {
        option (google.api.http) = {
            post: "/logger/entry"
            body: "*"
        };
    }

    rpc GetLogStream(SignedServiceInfo) returns(stream LogEntry) {
        option (google.api.http) = {
            get: "/logger/entry/stream/{type}/{index}"
        };
    }

    rpc GetLogStreamWithConstraint(ConstraintedLogRequest) returns(stream LogEntry) {
        option (google.api.http) = {
            get: "/logger/entry/stream/{type}/{index}/constrainted"
        };
    }

    rpc GetLogEntriesCount(SignedServiceInfo) returns(LogEntriesCount) {
        option (google.api.http) = {
            get: "/logger/entry/{type}/{index}/count"
        };
    }
}
