syntax = "proto3";

package proto;

message Empty {}

message ServiceType {
    string type = 1;
}

message ServiceTypesList {
    repeated ServiceType types = 1;
}

/* RegistryResponse represents response from Registry service
 * It contains status code and optional message
 */
message RegistryResponse {
    enum Code {
        __DEFAULT = 0;
        OK = 1;
        INVALID = 2; // Signature is invalid
        FAIL = 3; // Internal error
        CANCELED = 4; // Action cancelled on server
        NOT_IMPLEMENTED = 5; // Health route is not responding
        NULL = 6; // No service is received
        EXISTS = 7; // Service is already registered
    }

    Code status = 1;
    string message = 2;
}

message Service {
    string proto = 1;
    string type = 2;
    string host = 3;
    int32 port = 4;
    int32 httpPort = 5;
    int32 httpsPort = 6;
    repeated string routes = 7;
    string health = 8;
    int32 weight = 9;
    string signature = 10;
}

message ServiceList {
    repeated Service services = 1;
}

message ServiceInfo {
    string type = 1;
    int32 index = 2;
}

message InstanceInfo {
    string instanceName = 1;
}

message Health {
    bool up = 1;
}
